<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:summary="@string/corepatch"
        app:iconSpaceReserved="false" />
    <PreferenceCategory
        android:title="@string/settings"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:defaultValue="true"
            android:key="removeThemeAd2"
            android:summary="@string/removeThemeAd_summary"
            android:title="@string/removeThemeAd"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="removeInstallerAd"
            android:summary="@string/removeInstallerAd_summary"
            android:title="@string/removeInstallerAd"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="removeInstallerAuth"
            android:summary="@string/removeInstallerAuth_summary"
            android:title="@string/removeInstallerAuth"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="removeInstallerLimit"
            android:summary="@string/removeInstallerLimit_summary"
            android:title="@string/removeInstallerLimit"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="removeSplashAd"
            android:summary="@string/removeSplashAd_summary"
            android:title="@string/removeSplashAd"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="disableWaiting"
            android:summary="@string/disableWaiting_summary"
            android:title="@string/disableWaiting"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="removeMmsAd"
            android:summary="@string/removeMmsAd_summary"
            android:title="@string/removeMmsAd"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
